# portfolio

interactive-background/: Cargo.toml  Makefile.toml  README.md  index.html
interactive-background/assets/: skybox.wgsl
interactive-background/assets/models/: .gitignore  Electric guitar.glb  Guitar Amp.glb  Mushroom.glb  Oculus Controller.glb  Portal Companion Cube.glb  Tree.glb  Videogame Controller.glb
interactive-background/src/: lib.rs  loading_plugin.rs  main.rs  scene_plugin.rs  skybox_plugin.rs
interactive-background/src/interaction_plugin/: components.rs  mod.rs  resources.rs  systems.rs
interactive-background/src/rotation_plugin/: components.rs  mod.rs  systems.rs
interactive-background/src/skybox_plugin/: mod.rs  render.rs  shader.rs
interactive-background/src/smooth_moving_plugin/: components.rs  mod.rs  systems.rs
website/: .gitignore  Dockerfile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
website/src/: app.d.ts  global.css
website/src/lib/: constants.ts
website/src/lib/assets/crypt/: content_fr.toml.gpg  content_fr.toml.sha256  var_fr.toml.gpg  var_fr.toml.sha256
website/src/lib/components/: dialog.svelte  footer.svelte  lang-card.svelte  project-card.svelte
website/src/lib/components/banner/: background.svelte  banner.svelte  hud.svelte  loading-failed.svelte  loading.svelte  title.svelte
website/src/lib/components/content/: content.svelte  (+1 more)
website/src/lib/models/: content.ts  enums.ts  index.ts  vars.ts
website/src/routes/: +layout.ts  +page.svelte
(+4 files in other folders)
