[package]
name = "interactive-background"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["webgl2"] }
wgpu-types = "23.0.0"

[profile.dev]
opt-level = 1

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 3
